ajustes do header

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,53 @@
   <body>
     <main>
       <header>
-        <nav></nav>
+        <div>
+          <button>ligar</button>
+          <nav>
+            <ul class="itens-menu">
+              <li>Início</li>
+              <ul id="tratamento"><a href="#" id="tratamentoa">Tratamentos</a>
+                <ul class="sub-menu">
+                  <li>
+                    <li>
+                      <ul id="estetica"><a href="#" class="item">Estética</a>
+                        <ul class="sub-menu-1">
+                          <li>Lente de Contato Dental</li>
+                          <li>Facetas de Porcelana</li>
+                          <li>Clareamento Dental</li>
+                          <li>Coroas de Porcelana</li>
+                          <li>Restauração Dentária</li>
+                        </ul>
+                      </ul>
+                    </li>
+                    <li>
+                      <ul id="cirurgia">
+                        <a href="#" class="item">Cirurgia</a>
+                        <ul class="sub-menu-2">
+                          <li>Dentes do Siso</li>
+                          <li>Implante Dentário</li>
+                          <li>Cirurgia Ortoginática</li>
+                        </ul>
+                      </ul>
+                    </li>
+                    <li>Ortodontia</li>
+                    <li>Tratamento de Canal (Endodontia)</li>
+                    <li>Tratamento de Gengiva (Periodontia)</li>
+                    <li>Difusão do ATM</li>
+                    <li>Odontologia Pré-Natal</li>
+                    <li>Odontopediatria</li>
+                  </li>
+                </ul>
+              </ul>
+              <li>Day Clinic</li>
+              <li>Equipe</li>
+              <li>Depoimentos</li>
+              <li>Endereço</li>
+              <li>Blog</li>
+              <li>Contato</li>
+            </ul>
+          </nav>
+        </div>
       </header>
       <footer class="s-footer">
         <div class="container">
