--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="./resources/css/main.css" />
-    <!-- <link rel="stylesheet" href="./resources/css/main.css" /> -->
 
     <!--Font Awesome-->
     <link
@@ -339,7 +338,11 @@
       </footer>
     </main>
     <script src="./resources/js/main.js"></script>
+
+    <!--API Google-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd4U5ETE1wjqnXCVxoMBtx8Ez4Y2QBOUo&libraries=places"></script>
+
+    <!--Carrousel-->
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
@@ -349,6 +352,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
 
+    <!--Lógica API Google Depoimentos-->
     <script src="./resources/js/apiGoogle.js"></script>
   </body>
 </html>
